_sass/mobile.scss
// Tablet
@media screen and (max-width: 768px) {
  //Universal
  .header-wrap {
    flex-direction: column;
    margin: 0 auto;
}
  .cta.contact {
    justify-self: start;
    align-self: start;
  }
  //Home
  .keyword {
    display: none;
  }
  //Show
  .show-wrapper {
    display: block;
    flex-direction: column;
    align-items: center;
  }
  .person {
    width: 90%;
    margin: 0 auto;
  }
  .expect-offer-wrap {
    margin-top: 0;
  }
  .slogan-wrap {
    flex-direction: column;
  }
  .img-show-wrap {
    display: flex;
    flex-direction: column;
  }
  .img-show {
    width: 20rem;
    margin: 2rem auto;
  }
  .show-navigation {
    display: flex;
    flex-direction: column;
  }
  .button-show {
    margin: 1rem 0;
  }
  //story
  .story-content-wrap {
    display: flex;
    flex-direction: column-reverse;
  }
  .story-images {
    flex-direction: row;
    width: 15rem;
  }
  .story-text {
    margin-top: 2rem;
  }
  .story-image-2 {
    display: none;
  }
  .story-image-1 {
    transform: rotate(-14deg);
  }

  // Gallery
  .carousel-control-next-icon {
    color: $yellow;
    margin-left: 0;
  }
  .carousel-control-prev-icon {
    margin-right: 0;
  }

  //Facts
  .facts {
    margin-top: 2rem;
    flex-direction: column;
    justify-content: center;
  }
  .crdc-map {
    width: 20rem;
  }
  //Team
  .team {
    flex-direction: column;
    justify-content: center;
    p {
      width: 70%;
    }
    margin-top: 2rem;
  }
  .action-figure {
    margin-bottom: 8rem;
    margin-top: 2rem;
  }
  //Friends
  .friends-wrap {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .inner_circle {
    border-right: none;
    border-bottom: solid;
  }
  //Contact
  .contact-wrapper {
    display: flex;
    flex-direction: column;
    margin: 15%;
  }
  .contacts {
    margin-top: 2rem;
  }
}
@media screen and (max-width: 414px) {
  //Header {
  .logo {
    margin: 1rem auto;
  }
  //Home
  body.home {
    background-size: cover;
  }
  .content-home {
    display: flex;
  }
  .languages {
    flex-direction: column;
    .cta {
      margin: 1rem 0;
    }
  }
  //Show
  .story-wrap {
    width: 100%;
    padding: 0 0 2rem 0;
  }
  //Facts
  .facts {
    margin: 0 2rem;
  }
  //Friends
  .inner_circle {
    border-right: none;
    border-bottom: solid;
  }
  //Contacts
  .contact-wrapper, .form-wrap {
    width: 100%;
    margin: 2rem auto;
  }
  .contact-form {
    margin-bottom: 3rem;
  }
  //Impressum
  .impressum-wrap {
    display: flex;
    flex-direction: column;
  }
}
@media screen and (min-width: 992px) {
  .navbar-toggler {
    display: none !important;
  }
}

